recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

  if !(steps == 0) {
  avance(length);
  
  gauche(angle);
  tree(steps-1, length*shrink, angle, shrink);
  
  
  droite(2*angle);
  tree(steps-1, length*shrink, angle, shrink);
  gauche(angle);
  }
  
}